# covid-etl

./: Makefile  README.md  linters.sh  pyproject.toml
covid_etl/: __init__.py  consts.py  file_system_sync.py  insert_files_database.py  ssh_connect.py  trigger_insert.py  watch_files.py
covid_etl/hugo.amorim/: consegui.txt
tests/: test_covid_etl.py
